--- a/src/stylesheets/components/mentee-profile-header.scss
+++ b/src/stylesheets/components/mentee-profile-header.scss
@@ -22,7 +22,7 @@
     display: flex;
     width: 100%;
 
-    .icon {
+    &.subtext .icon {
       margin-right: 0.5rem;
     }
   }
